2008-11-06  Glenn Morris  <rgm@gnu.org>

	* xterm.c (handle_one_xevent): Don't let popup menus cause
	mouse-autoselect-window related window switching.  (Bug#1261)

2008-11-04  David Smith  <davidsmith@acm.org>  (tiny change)

	* xterm.c (xim_close_dpy): Avoid double-free on X11R6 XIM.

2008-11-04  Andreas Schwab  <schwab@suse.de>

	* xfns.c (Fx_wm_set_size_hint): Add missing return value.

2008-11-03  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (Fx_wm_set_size_hint): New function.

2008-11-03  Martin Rudalics  <rudalics@gmx.at>

	* textprop.c (Fprevious_single_char_property_change): Return 0
	when there's no change in a string.  (Bug#1301)

2008-11-02  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (do_switch_frame): New argument NORECORD passed to
	Fselect_window.
	(Fselect_frame): New argument NORECORD passed to
	do_switch_frame.
	(Fset_frame_selected_window): New argument NORECORD passed to
	Fselect_frame.
	(Fhandle_switch_frame, Fdelete_frame): Handle NORECORD argument
	in call of do_switch_frame.
	(Fset_mouse_position, Fset_mouse_pixel_position, Fraise_frame):
	Handle NORECORD argument in call of Fselect_frame.
	* lisp.h (do_switch_frame, Fselect_frame)
	(Fset_frame_selected_window): Adjust declarations.
	* window.c (select_frame_norecord): New function.
	(run_window_configuration_change_hook): Use it and call
	Fselect_frame with NORECORD set.
	(Fselect_window): Pass NORECORD to Fselect_frame.
	(Fset_window_configuration): Handle NORECORD argument in call of
	do_switch_frame.
	* minibuf.c (choose_minibuf_frame): Handle NORECORD in call of
	Fset_frame_selected_window.
	* keyboard.c (command_loop_1): Handle NORECORD in call of
	Fselect_frame (currently ifdefd).

2008-11-02  Ulrich Mueller  <ulm@kph.uni-mainz.de>

	* emacs.c (USAGE2): Untabify.

2008-11-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* composite.c (fill_gstring_header): Fix copy/paste typo.

2008-10-31  Martin Rudalics  <rudalics@gmx.at>
